public class SuperAdministrateur extends Utilisateur {
    public void gererUtilisateurs() {
        // Gestion des comptes utilisateurs.
    }
}
